# alltrue-llm-observability

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: auto-prerelease.yml  pull-request-labels.yml  release-asset.yml  release-assets.yml  run-test.yml
core/: pyproject.toml
core/src/alltrue/control/: __init__.py  batch.py  chat.py
core/src/alltrue/control/_internal/: token.py
core/src/alltrue/http/: __init__.py  cache.py
core/src/alltrue/utils/: config.py  logfire.py  path.py
core/src/alltrue_guardrails/control/: __init__.py  batch.py  chat.py
core/src/alltrue_guardrails/control/_internal/: token.py
core/src/alltrue_guardrails/http/: __init__.py  cache.py
core/src/alltrue_guardrails/utils/: config.py  logfire.py  path.py
core/tests/: test_batch.py  test_http_cache.py  test_internal_token.py  test_logfire.py  test_utils.py
sdk/: pyproject.toml
sdk/src/alltrue/event/: loop.py
sdk/src/alltrue/guardrails/: chat.py
sdk/src/alltrue/observers/: __init__.py  openai.py
src/: build.py  version.py
src/alltrue/event/: __init__.py  loop.py
src/alltrue/guardrails/: __init__.py  chat.py
src/alltrue/observers/: __init__.py  openai.py
src/alltrue_guardrails/event/: loop.py
src/alltrue_guardrails/guardrails/: chat.py
src/alltrue_guardrails/observers/: __init__.py  openai.py
tests/: __init__.py  conftest.py
tests/guardrails/: __init__.py  test_chat.py
tests/mock/: openai.py
tests/mocks/: control.py  openai.py
tests/observers/: test_openai.py
