[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "alltrue-llm-observability"
readme = "README.md"
dynamic = ["version"]
authors = [
    {name = "AllTrue.ai INC", email = "ury@alltrue.ai"}
]
description = "LLM Observability SDK for AllTrue.ai API"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">= 3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "alltrue-llm-observability-core @ file:///${PROJECT_ROOT}/core",
]

[project.urls]
Repository = "https://github.com/AllTrue-ai/alltrue-llm-observability"

[project.optional-dependencies]
observers = [
    "wrapt~=1.17.2",
]
openai-observers = [
    "alltrue-llm-observability[observers]",
    "openai~=1.63.0",
]
testing = [
    "fastapi~=0.111.1",
    "mitmproxy~=11.0.2",
]
dev = [
    "build",
    "pre-commit",
]
full = [
    "alltrue-llm-observability-core[testing] @ file:///${PROJECT_ROOT}/core",
    "alltrue-llm-observability[openai-observers]",
    "alltrue-llm-observability[testing]",
    "alltrue-llm-observability[dev]",
]

[tool.pdm.version]
source = "file"
path = "src/version.py"

[tool.pdm.build]
includes = ["src/alltrue"]
custom-hook = "src/build.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-o log_cli=true",
    "-o log_cli=info",
    "-o consider_namespace_packages=true",
    "--import-mode=importlib",
]
asyncio_mode = "auto"
markers = [
    "skip_on_aws: marks tests to be skipped on AWS",
]
pythonpath = [
    "src",
    "core/src",
]

[tool.mypy]
mypy_path = "src:core/src"
namespace_packages = true
explicit_package_bases = true
exclude = "core/tests/__init__.py"

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_missing_imports = true
follow_imports_for_stubs = true
