[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "alltrue-customer-sdk"
readme = "README.md"
dynamic = ["version"]
authors = [
    {name = "AllTrue.ai INC", email = "ury@alltrue.ai"}
]
description = "Client SDK for AllTrue.ai API"
dependencies = [
    "openai~=1.63.0",
    "wrapt~=1.17.2",
]
requires-python = ">= 3.11"

[project.urls]
Repository = "https://github.com/AllTrue-ai/ai-security-customer-plane"

[project.optional-dependencies]
full = [
    "alltrue-customer-core @ file:///${PROJECT_ROOT}/../core",
]

[tool.pdm.version]
source = "file"
path = "../src/version.py"

[tool.pdm.build]
includes = ["src/alltrue/"]
custom-hook = "../src/build.py"
